@startuml
' !theme vibrant
' uncomment the line above for a different theme

title "LM Entity Relation diagram v0.0.7"
skinparam linetype ortho

' skinparam commands for better layout and appearance
skinparam {
    shadowing false
    handwritten false
    classBackgroundColor White
    classArrowColor #666666
    classBorderColor #666666
    noteBackgroundColor #F9F9F9
    noteBorderColor #666666
    packageStyle rectangle
}

package "User Management" {
    entity "member" as member {
      * id: BIGINT (PK)
      --
      * nickname: VARCHAR(20) (UK)
      * role: VARCHAR(20)
      * status: VARCHAR(20)
      * primary_email: VARCHAR(255)
      profile_image_url: VARCHAR(255)
      self_introduction: VARCHAR(255)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }

    note right of "member"
        **SystemRole:**
        ADMIN, MEMBER
        --
        **MemberStatus:**
        PENDING, ACTIVE,
        INACTIVE, BANNED,
        WITHDRAWN
    end note

    entity "account" as account {
      * id: BIGINT (PK)
      --
      * member_id: BIGINT (FK)
      * status: VARCHAR(20)
      * email: VARCHAR(255) (UK)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }

    note right of "account"
        **AccountStatus:**
        PENDING, ACTIVE,
        INACTIVE
    end note

    entity "credential" as credential {
      * id: BIGINT (PK)
      --
      * account_id: BIGINT (FK)
      * type: VARCHAR(20)
      * secret: VARCHAR(255)
      last_used_at: DATETIME(6)
    }

    note right of credential
      **CredentialType:**
      PASSWORD, GOOGLE,
      KAKAO, GITHUB, NAVER
    end note
}

package "Auth Management" {
    entity "refresh_token" as refresh_token {
      * id: BIGINT (PK)
      --
      * member_id: BIGINT (FK)
      * token: VARCHAR(255) (UK)
      * expires_at: DATETIME(6)
      * created_at: DATETIME(6)
      * revoked: BOOLEAN
    }
}

package "Course Management" {
    entity "course" as course {
      * id: BIGINT (PK)
      --
      * title: VARCHAR(255) (UK)
      description: VARCHAR(255)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }

    entity "curriculum" as curriculum {
      * id: BIGINT (PK)
      --
      * course_id: BIGINT (FK)
      * title: VARCHAR(255)
      description: VARCHAR(255)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }

    entity "course_member" as course_member {
      * id: BIGINT (PK)
      --
      * course_id: BIGINT (FK)
      * member_id: BIGINT (FK)
      * course_role: VARCHAR(20)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }

    note right of course_member
        **CourseRole:**
        MANAGER, MENTOR,
        MENTEE
    end note
}

package "Session Management" {
    entity "session" as session {
      * id: BIGINT (PK)
      --
      course_id: BIGINT (FK)
      curriculum_id: BIGINT (FK)
      parent_id: BIGINT (FK)
      * title: VARCHAR(255)
      * scheduled_at: DATETIME(6)
      * scheduled_end_at: DATETIME(6)
      * type: VARCHAR(50)
      * location: VARCHAR(50)
      location_details: VARCHAR(255)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }

    entity "session_participant" as session_participant {
      * id: BIGINT (PK)
      --
      * session_id: BIGINT (FK)
      * member_id: BIGINT (FK)
      * role: VARCHAR(255)
      --
      * created_at: DATETIME(6)
      last_modified_at: DATETIME(6)
      * created_by: BIGINT
      last_modified_by: BIGINT
      * version: BIGINT
    }
}

package "Attendance Management (MongoDB)" {
    note as attendance_note
      **MongoDB Collection: attendance**
      
      • id: String (ObjectId)
      • sessionId: Long
      • memberId: Long  
      • events: Array[AttendanceEvent]
        - CheckedIn: { timestamp: Instant }
        - CheckedOut: { timestamp: Instant }
      • finalStatus: AttendanceStatus
        (PRESENT, ABSENT, LATE, LEFT_EARLY)
    end note
}

' Define relationships with cardinality
member ||--o{ account
member ||--o{ course_member
member ||--o{ session_participant
member ||--o{ refresh_token

account ||--o{ credential

course ||--o{ curriculum
course ||--o{ course_member
course ||--o{ session

curriculum ||--o{ session

session ||--o{ session_participant
session }o--|| session : "parent/children"

' MongoDB relationships (logical, not FK-based)
session ..> attendance_note : " MongoDB reference\n (sessionId)"
member ..> attendance_note : " MongoDB reference\n (memberId)"

@enduml